# STM32F407G-DISC1-and-Flipper-Zero-Integration-Labs

./: JOURNAL.md  README.html  README.md  ROADMAP.md
Docs/: protocol_reference.md  wiring_diagrams.md
FlipperApp/: application.fam  stm32_controller.c
STM32/: CMakeLists.txt  Makefile  SETUP.md  STM32F407VGTX_FLASH.ld
STM32/Core/Inc/: main.h  stm32f4xx_hal_conf.h
STM32/Core/Src/: main.c  system_stm32f4xx.c
STM32/Core/Src/modes/: mode1_uart_console.c  mode2_gpio_remote.c  mode3_adc_dashboard.c  mode4_spi_link.c  mode5_flipper_app.c
STM32/cmake/: gcc-arm-none-eabi.cmake
